@@ -8,15 +8,19 @@ MRexperiment and a particular featureData column (i.e. 'genus') will aggregate c
 to the desired level by with the aggfun function (default colSums). Possible aggfun alternatives
 include colMeans and colMedians.}
 \usage{
-aggregateByTaxonomy(obj, lvl, norm = TRUE, aggfun = colSums)
+aggregateByTaxonomy(obj, lvl, alternate = FALSE, norm = TRUE,
+  aggfun = colSums)
 
-aggTax(obj, lvl, norm = TRUE, aggfun = colSums)
+aggTax(obj, lvl, alternate = FALSE, norm = TRUE, aggfun = colSums)
 }
 \arguments{
   \item{obj}{A MRexperiment object.}
 
   \item{lvl}{featureData column name from the MRexperiment
   object.}
+
+  \item{alternatelabel}{Use the rowname for undefined OTUs
+  instead of aggregating to others.}
 
   \item{norm}{Whether to aggregate normalized counts or
   not.}
